--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 asgiref==3.8.1
+cffi==1.17.1
+cryptography==44.0.2
 Django==5.2
+jwt==1.3.1
+pillow==11.2.1
+psycopg==3.2.6
+psycopg-binary==3.2.6
+psycopg-pool==3.2.6
+pycparser==2.22
 sqlparse==0.5.3
 typing_extensions==4.13.2
+uuid==1.30
